# ParlinfoSpeechScraper

./: .gitignore  .gitmodules  Makefile  Manifest.toml  Project.toml  README.md  pyproject.toml  zensical.toml
Paper/: paper.bib  paper.md
docs/: Project.toml  index.md  make.jl
docs/src/: download.md  functionreference.md  index.md  sgml2xml.md  test.md
examples/: house.toml  senate.toml
