[project]
name = "parlinfospeechscraper"
version = "1.0.0"
description = "An end-to-end pipeline for downloading, parsing, and reformatting [Hansard](https://www.aph.gov.au/Parliamentary_Business/Hansard) data into machine-readable csv files."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [{ include-group = "docs" }]
docs = ["zensical>=0.0.42"]
